Java change version to 11